# python-shortpath

./: LICENSE.txt  README.md  pyproject.toml  setup.py
shortpath/: __init__.py
src/: shortpath.py
tests/: test_shortpath.py
