[tool.poetry]
name = "shortpath"
version = "0.1.0"
description = "Generate a short path string from longests"
authors = ["Yusuke Ohshima <ohshima.yusuke@yukke.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
